--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,27 @@
-/*  your css code here. If applicable */
+*{
+	margin:0px;
+	padding:0px
+}
+.card{
+	width:300px;
+	text-align:center;
+	padding:30px;
+	background-color:#f1f1f1;
+	box-shadow: 0px 0px 8px darkgray;
+	
+}
+
+img{
+	width:200px;
+	height:200px;
+}
+
+.btn{
+	padding:10px;
+	font-size:20px;
+	border-radius:10px;
+	background-color:#fe625a;
+	color:white;
+	border:none;
+	margin-top:10px;
+}
